--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1046,6 +1046,9 @@
     <ClCompile Include="UVa\10300\10334.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10432.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1185,6 +1188,9 @@
     </ClInclude>
     <ClInclude Include="Library\spanning_tree.h">
       <Filter>Library\Graph Theory</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\triangle.h">
+      <Filter>Library\Computational Geometry</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
