--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1061,6 +1061,9 @@
     <ClCompile Include="UVa\10200\10298.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\661.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
