--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1067,6 +1067,9 @@
     <ClCompile Include="UVa\10200\10295.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10193.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
