--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1073,6 +1073,9 @@
     <ClCompile Include="UVa\500\594.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11503.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
