--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1076,6 +1076,9 @@
     <ClCompile Include="UVa\11500\11503.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11631.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
