--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1079,6 +1079,9 @@
     <ClCompile Include="UVa\11600\11631.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\280.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
