--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1082,6 +1082,9 @@
     <ClCompile Include="UVa\200\280.cpp">
       <Filter>UVa\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10183.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1300,6 +1303,9 @@
     </None>
     <None Include="UVa\10300\10334.py">
       <Filter>UVa\10300</Filter>
+    </None>
+    <None Include="UVa\10100\10183.py">
+      <Filter>UVa\10100</Filter>
     </None>
   </ItemGroup>
 </Project>
