--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1085,6 +1085,12 @@
     <ClCompile Include="UVa\10100\10183.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\446.cpp">
+      <Filter>UVa\400\440</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12500\12578.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
