--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1091,6 +1091,9 @@
     <ClCompile Include="UVa\12500\12578.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11137.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
