Tested sumFactors(), AC.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1097,6 +1097,9 @@
     <ClCompile Include="UVa\10000\10062.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13131.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
