Tested numFactors(), AC.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1103,6 +1103,9 @@
     <ClCompile Include="UVa\13100\13185.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\294.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
