--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1115,6 +1115,9 @@
     <ClCompile Include="UVa\13100\13127.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13115.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
