--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1118,6 +1118,9 @@
     <ClCompile Include="UVa\13100\13115.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\444.cpp">
+      <Filter>UVa\400\440</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
