--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1124,6 +1124,9 @@
     <ClCompile Include="UVa\11700\11715.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\256.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
