--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1127,6 +1127,9 @@
     <ClCompile Include="UVa\200\256.cpp">
       <Filter>UVa\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\382.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
