--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1130,6 +1130,12 @@
     <ClCompile Include="UVa\300\382.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\483.cpp">
+      <Filter>UVa\400\480</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\400\401.cpp">
+      <Filter>UVa\400\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
