--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1142,6 +1142,9 @@
     <ClCompile Include="UVa\200\278.cpp">
       <Filter>UVa\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\441.cpp">
+      <Filter>UVa\400\440</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
