--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1145,6 +1145,9 @@
     <ClCompile Include="UVa\400\441.cpp">
       <Filter>UVa\400\440</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\455.cpp">
+      <Filter>UVa\400\450</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
