--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1148,6 +1148,9 @@
     <ClCompile Include="UVa\400\455.cpp">
       <Filter>UVa\400\450</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\469.cpp">
+      <Filter>UVa\400\460</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
