--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1157,6 +1157,9 @@
     <ClCompile Include="UVa\11400\11450.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10533.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
