--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1160,6 +1160,9 @@
     <ClCompile Include="UVa\10500\10533.cpp">
       <Filter>UVa\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10067.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
