--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1163,6 +1163,9 @@
     <ClCompile Include="UVa\10000\10067.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\534.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
