--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1169,6 +1169,9 @@
     <ClCompile Include="UVa\10300\10336.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10347.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
