--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1172,6 +1172,9 @@
     <ClCompile Include="UVa\10300\10347.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11713.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
