--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1181,6 +1181,9 @@
     <ClCompile Include="UVa\100\122.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10608.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
