--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1190,6 +1190,9 @@
     <ClCompile Include="UVa\10200\10285.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11611.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
