--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1193,6 +1193,9 @@
     <ClCompile Include="UVa\11600\11611.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10465.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
